//时间: 2019-01-23
//作者: China Captain
//功能: 基础消息定义
//修改: proto2  升级到 proto3.6

syntax="proto3";
package IM.Server;
import "IM.BaseDefine.proto";
//由于生成java代码时不在支持 optimize_for = LITE_RUNTIME；采用默认的SPEED
//option optimize_for = LITE_RUNTIME;

//service id:   0x0007

//db_proxy
message IMStopReceivePacket{
	//cmd id:   0x0702
	uint32 result = 1;
}

//db_proxy
message IMValidateReq{
	//cmd id:	0x0703
	string user_name = 1;
	string password = 2;
	bytes attach_data = 20;
}

//db_proxy
message IMValidateRsp{
	//cmd id:	0x0704
	string user_name = 1;
	uint32 result_code = 2;
	string result_string = 3;
	IM.BaseDefine.UserInfo user_info = 4;
	bytes attach_data = 20;
}

//db_proxy
message IMGetDeviceTokenReq{
	//cmd id:	0x0705
	repeated uint32 user_id = 1;
	bytes attach_data = 20;
}

//db_proxy
message IMGetDeviceTokenRsp{
	//cmd id:	0x0706
	repeated IM.BaseDefine.UserTokenInfo user_token_info = 1;
	bytes attach_data = 20;
}

message IMRoleSet{
	//cmd id:	0x0707
	uint32 master = 1;		//0-slave, 1-master
}

message IMOnlineUserInfo{
	//cmd id:	0x0708
	repeated IM.BaseDefine.ServerUserStat user_stat_list = 1;
}

message IMMsgServInfo{
	//cmd id:	0x0709
	string ip1 = 1;
	string ip2 = 2;
	uint32 port = 3;
	uint32 max_conn_cnt = 4;
	uint32 cur_conn_cnt = 5;
	string host_name = 6;
}

message IMUserStatusUpdate{
	//cmd id:	0x070a
	uint32 user_status = 1;
	uint32 user_id = 2;
	IM.BaseDefine.ClientType client_type = 3;
}

message IMUserCntUpdate{
	//cmd id:	0x070b
	uint32 user_action = 1; 		//1-inc, 2-dec
	uint32 user_id = 2;
}

message IMServerKickUser{
	//cmd id:	0x070d
	uint32 user_id = 1;
	IM.BaseDefine.ClientType client_type = 2;
	uint32 reason = 3;   	//KICK_REASON_DUPLICATE_USER = 1;
}

message IMServerPCLoginStatusNotify{
	//cmd id:	0x070e
	uint32 user_id = 1;
	uint32 login_status = 2; 		//1: on   0: off
}

message IMPushToUserReq{
	//cmd id:	0x070f
	string flash = 1;
	string data = 2;
	repeated IM.BaseDefine.UserTokenInfo user_token_list = 3;
}

message IMPushToUserRsp{
	//cmd id:	0x0710
	repeated IM.BaseDefine.PushResult push_result_list = 1;
}

message IMGroupGetShieldReq{
	//cmd id:			0x0711
	uint32 group_id = 1;
	repeated uint32 user_id = 2;
	bytes attach_data = 20;
}

message IMGroupGetShieldRsp{
	//cmd id: 			0x0712
	uint32 group_id = 1;
	repeated IM.BaseDefine.ShieldStatus shield_status_list = 2;
	bytes attach_data = 20;
}

message IMFileTransferReq{
	//cmd id:			0x0715
	uint32 from_user_id = 1;
	uint32 to_user_id = 2;
	string file_name = 3;
	uint32 file_size = 4;
	IM.BaseDefine.TransferFileType trans_mode = 5;
	bytes attach_data = 20;
}

message IMFileTransferRsp{
	//cmd id:			0x0716
	uint32 result_code = 1;
	uint32 from_user_id = 2;
	uint32 to_user_id = 3;
	string file_name = 4;
	uint32 file_size = 5;
	string task_id = 6;
	IM.BaseDefine.TransferFileType trans_mode = 7;
	bytes attach_data = 20;
}

message IMFileServerIPReq{
	//cmd id:			0x0717

}

message IMFileServerIPRsp{
	//cmd id:			0x0718
	repeated IM.BaseDefine.IpAddr ip_addr_list = 1;
}
